--- a/ch3_高质量的代码/22_链表中倒数第k个节点.ipynb
+++ b/ch3_高质量的代码/22_链表中倒数第k个节点.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,6 +112,138 @@
     "    print(\"倒数第8个节点: {}\".format(node.val))\n",
     "except Exception as e:\n",
     "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 扩展\n",
+    "求链表的中间节点。如果链表中的节点总数为奇数，则返回中间节点。如果总数为偶数，则返回中间两个节点的任意一个。\n",
+    "\n",
+    "#### 分析\n",
+    "还是定义两个指针，同时从`head`出发，一个每次走一步，另一个每次走两步。走两步的指针走到末尾时候，走得慢的指针正好在链表中间。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def find_mid(head):\n",
+    "    if head is None:\n",
+    "        return None\n",
+    "    if head.next is None:\n",
+    "        return head\n",
+    "    \n",
+    "    p_step_one = head\n",
+    "    p_step_two = head\n",
+    "    \n",
+    "    while p_step_two.next != None:\n",
+    "        p_step_one = p_step_one.next\n",
+    "        p_step_two = p_step_two.next.next\n",
+    "        if p_step_two is None:\n",
+    "            break\n",
+    "        \n",
+    "    return p_step_one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7]\n",
+      "The node in the middle is: 4\n",
+      "\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8]\n",
+      "The node in the middle is: 5\n",
+      "\n",
+      "[1]\n",
+      "The node in the middle is: 1\n",
+      "\n",
+      "[1, 2]\n",
+      "The node in the middle is: 2\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "###########################\n",
+    "#         TEST            #          \n",
+    "###########################\n",
+    "\n",
+    "# Create a test linked-list\n",
+    "test = [1, 2, 3, 4, 5, 6, 7]\n",
+    "head = ListNode(1)\n",
+    "p = head\n",
+    "for i in test[1:]:\n",
+    "    p.next = ListNode(i)\n",
+    "    p = p.next\n",
+    "\n",
+    "# Test\n",
+    "mid_node = find_mid(head)\n",
+    "print(test)\n",
+    "print(\"The node in the middle is: {}\".format(mid_node.val))\n",
+    "print(\"\")\n",
+    "\n",
+    "# Create a test linked-list\n",
+    "test = [1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "head = ListNode(1)\n",
+    "p = head\n",
+    "for i in test[1:]:\n",
+    "    p.next = ListNode(i)\n",
+    "    p = p.next\n",
+    "\n",
+    "# Test\n",
+    "mid_node = find_mid(head)\n",
+    "print(test)\n",
+    "print(\"The node in the middle is: {}\".format(mid_node.val))\n",
+    "print(\"\")\n",
+    "\n",
+    "# 边界测试\n",
+    "test = [1]\n",
+    "head = ListNode(1)\n",
+    "p = head\n",
+    "for i in test[1:]:\n",
+    "    p.next = ListNode(i)\n",
+    "    p = p.next\n",
+    "\n",
+    "# Test\n",
+    "mid_node = find_mid(head)\n",
+    "print(test)\n",
+    "print(\"The node in the middle is: {}\".format(mid_node.val))\n",
+    "print(\"\")\n",
+    "\n",
+    "test = [1, 2]\n",
+    "head = ListNode(1)\n",
+    "p = head\n",
+    "for i in test[1:]:\n",
+    "    p.next = ListNode(i)\n",
+    "    p = p.next\n",
+    "\n",
+    "# Test\n",
+    "mid_node = find_mid(head)\n",
+    "print(test)\n",
+    "print(\"The node in the middle is: {}\".format(mid_node.val))\n",
+    "print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 总结\n",
+    "当用一个指针遍历链表不能解决问题的时候，可以尝试用两个**速度不同**或者**开始时间不一样**的指针来遍历链表"
    ]
   },
   {
