--- a/ch3_高质量的代码/24_反转链表.ipynb
+++ b/ch3_高质量的代码/24_反转链表.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -99,6 +99,46 @@
     "print(\"Output:\", end=\" \")\n",
     "print_linked_list(new_head)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: 1\n",
+      "Output: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Special case test\n",
+    "test = [1]\n",
+    "head = ListNode(1)\n",
+    "p = head\n",
+    "for i in test[1:]:\n",
+    "    p.next = ListNode(i)\n",
+    "    p = p.next\n",
+    "\n",
+    "# Test\n",
+    "print(\"Input:\", end=\" \")\n",
+    "print_linked_list(head)\n",
+    "new_head = reverse_list(head)\n",
+    "print(\"Output:\", end=\" \")\n",
+    "print_linked_list(new_head)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
