add analysis for task 28

--- a/ch4_解决面试题的思路/28_对称的二叉树.ipynb
+++ b/ch4_解决面试题的思路/28_对称的二叉树.ipynb
@@ -4,21 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 28\n",
+    "## 28. 对称的二叉树\n",
     "\n",
     "操作给定的二叉树，将其变换为源二叉树的镜像\n",
-    "<img src=\"images/img27_a.png\" style=\"width: 300px;\"/>\n",
+    "<img src=\"images/img28.png\" style=\"width: 400px;\"/>\n",
     "\n",
     "### 分析\n",
-    "观察到镜像后的二叉树就是不断地对第一棵树做`left`和`right sub-tree`的交换。\n",
-    "<img src=\"images/img27_b.png\" style=\"width: 500px;\"/>\n",
-    "[//]: # (<img src=\"images/img25.png\" style=\"width: 400px;\"/>)"
+    "前序遍历：先left，再root，后right，如果我们转换一下前序遍历，变成对称前序遍历：先right，再root，后left。那么如果前序遍历和对称前序遍历二叉树后，得到的序列是一样的，那么这颗树就是对称的。\n",
+    "\n",
+    "⚠️但是对于上图中第三颗树的情况，所有的node的值都是一样的，上面的方法就不行了。为了解决掉这个问题，可以在遍历到没有left或right child node的时候，把`None`加入到输出的序列里。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class TreeNode:\n",
@@ -31,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def is_symmetrical(pRoot):\n",
@@ -168,7 +172,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -189,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
