add extended thoughts

--- a/ch4_解决面试题的思路/33_二叉搜索树的后序遍历序列.ipynb
+++ b/ch4_解决面试题的思路/33_二叉搜索树的后序遍历序列.ipynb
@@ -128,6 +128,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 举一反三\n",
+    "如果面试题要求处理一棵二叉树的遍历序列， 则可以先找到二叉树的**根节点**，再基于根节点把整课树的遍历序列拆分成\n",
+    "\n",
+    "左子树对应的子序列和右子树对应的子序列，接下来再*递归地处理这两个子序列*。面试题7 \"重建二叉树\" 应用的也是这种思路。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
