add extension case for task38

--- a/ch4_解决面试题的思路/38_字符串的排列.ipynb
+++ b/ch4_解决面试题的思路/38_字符串的排列.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -252,8 +252,8 @@
       "Abb\n",
       "bAb\n",
       "bbA\n",
-      "bbA\n",
-      "bAb\n"
+      "bAb\n",
+      "bbA\n"
      ]
     }
    ],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -330,18 +330,18 @@
       "1342\n",
       "1423\n",
       "1432\n",
-      "3142\n",
+      "2134\n",
+      "2143\n",
+      "2314\n",
+      "2341\n",
+      "2413\n",
+      "2431\n",
       "3124\n",
-      "3412\n",
-      "3421\n",
+      "3142\n",
       "3214\n",
       "3241\n",
-      "2431\n",
-      "2413\n",
-      "2341\n",
-      "2314\n",
-      "2143\n",
-      "2134\n",
+      "3412\n",
+      "3421\n",
       "4123\n",
       "4132\n",
       "4213\n",
@@ -365,6 +365,102 @@
     "solution.permutation('1234')\n",
     "for i in solution.all_combination:\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 扩展1：求字符的所有组合\n",
+    "举例：还是输入三个字符，a，b，c，则它们的组合有：a,b,c,ab,ac,bc,abc。注意ab和bc只能算一个组合。\n",
+    "\n",
+    "#### 分析：\n",
+    "还是按上面的思路将问题拆分，第一步从n个字符种挑出组合的第一个字符，第二步对剩下的n-1个字符做同样的操作。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def combination_select(ss):\n",
+    "    if ss is None or ss == '' or not isinstance(ss, str):\n",
+    "        return\n",
+    "\n",
+    "    combination_recursive(list(ss), '')\n",
+    "\n",
+    "def combination_recursive(char_list, start_char):\n",
+    "    if char_list == []:\n",
+    "        return\n",
+    "\n",
+    "    for i in range(len(char_list)):\n",
+    "        # pick the first char, combined with the start_char and print\n",
+    "        print(start_char + char_list[i])\n",
+    "        # calculate the reset of the char_list\n",
+    "        combination_recursive(char_list[i+1:], start_char + char_list[i])\n",
+    "\n",
+    "# 备注：\n",
+    "# 这里只假设输入的字符串里没有重复的字符，如果有重复的字符，可以用上面一样的处理方法，\n",
+    "# 把method写在class里，然后用一个array存储所有的输出确保没有重复。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "ab\n",
+      "abc\n",
+      "ac\n",
+      "b\n",
+      "bc\n",
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "combination_select('abc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "ab\n",
+      "abc\n",
+      "abcd\n",
+      "abd\n",
+      "ac\n",
+      "acd\n",
+      "ad\n",
+      "b\n",
+      "bc\n",
+      "bcd\n",
+      "bd\n",
+      "c\n",
+      "cd\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "combination_select('abcd')"
    ]
   },
   {
