add relavent problems to task38

--- a/ch4_解决面试题的思路/38_字符串的排列.ipynb
+++ b/ch4_解决面试题的思路/38_字符串的排列.ipynb
@@ -12,7 +12,7 @@
     "把字符串的排列看成两部分，第一部分是第一个字符，第二部分是后面的所有字符。\n",
     "\n",
     "第一步求所有可能出现在第一个位置的字符， 即把第一个字符和后面所有的字符交换。第二步固定第一个字符，求后面所有字符的排列，以及这个字符之后的所有字符（这个描述已经非常“递归”了）。\n",
-    "<img src=\"images/img38.png\" style=\"width: 480px;\"/>\n",
+    "<img src=\"images/img38_a.png\" style=\"width: 480px;\"/>\n",
     "\n",
     "[//]: # (<img src=\"images/img123.png\" style=\"width: 400px;\"/>)"
    ]
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -461,6 +461,152 @@
    ],
    "source": [
     "combination_select('abcd')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 相关题目1：\n",
+    "输入一个含有8个数字的数组，判断有没有可能把这8个数字分别放到正方体的8个顶点上，使得正方体上三组相对的面上的4个顶点的和都相等\n",
+    "<img src=\"images/img38_b.png\" style=\"width: 200px;\"/>\n",
+    "\n",
+    "### 分析\n",
+    "这相当于先得到`a1,a2,a3,a4,a5,a5,a6,a7,a8`这8个数字的所有排列，然后判断有没有某一个排列符合题目的条件：\n",
+    "```\n",
+    "a1+a2+a3+a4 = a5+a6+a7+a8  &&\n",
+    "a1+a3+a5+a7 = a2+a4+a6+a8  &&\n",
+    "a1+a2+a5+a6 = a3+a4+a7+a8\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 相关题目2: 八皇后问题\n",
+    "在8x8的国际象棋上摆放8个皇后，使其不能相互攻击，即任意两个皇后不得处在同一行，同一列或者同一条对角线上。请问一共有多少种符合条件的摆法。\n",
+    "<img src=\"images/img38_c.png\" style=\"width: 200px;\"/>\n",
+    "\n",
+    "### 分析\n",
+    "由于8个皇后的任意两个不能出在同一行，那么肯定是每一个皇后占据一行。所以可以确定每行都有一个Queen，接下来只需要确定每行的Queen排在第几列即可。\n",
+    "\n",
+    "于是可以定义一个size=8的数组`column_index = [0, 1, 2, 3, 4, 5, 6, 7]`，第i个element的数值x，表示第i行的Queen排在第x列。也就是说第i个Queen的位置为：`(i, column_index[i])`\n",
+    "\n",
+    "对这8个数字进行全排列，对每个排列进行判断，如果两两Queen进行比较，`abs(row1 - row2) == abs(col1 - col2)`则不符合。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class EightQueenSolution:\n",
+    "    def __init__(self):\n",
+    "        self.all_combination = []\n",
+    "\n",
+    "    def permutation(self, array):\n",
+    "        if array is None or array == [] or not isinstance(array, list):\n",
+    "            return\n",
+    "\n",
+    "        self.permutation_recursive(array, 0)\n",
+    "\n",
+    "    def permutation_recursive(self, array, index):\n",
+    "        if index == len(array):\n",
+    "            a = self.check_queens_configuration(array)\n",
+    "            if self.check_queens_configuration(array) and (array not in self.all_combination):\n",
+    "                self.all_combination.append(array.copy())\n",
+    "        else:\n",
+    "            for i in range(index, len(array)):\n",
+    "                # move to  position\n",
+    "                self.move_to_index(array, i, index)\n",
+    "                self.permutation_recursive(array, index + 1)\n",
+    "                # move back\n",
+    "                self.move_to_index(array, index, i)\n",
+    "\n",
+    "    def check_queens_configuration(self, column_indexes):\n",
+    "        \"\"\"\n",
+    "        对Queen的位置两两比较，在同一对角线上则返回False。\n",
+    "        \"\"\"\n",
+    "        for row1 in range(len(column_indexes)):\n",
+    "            for row2 in range(row1 + 1, len(column_indexes)):\n",
+    "                col1 = column_indexes[row1]\n",
+    "                col2 = column_indexes[row2]\n",
+    "                if abs(row1 - row2) == abs(col1 - col2):\n",
+    "                    return False\n",
+    "        return True\n",
+    "\n",
+    "    def move_to_index(self, array, old_index, new_index):\n",
+    "        \"\"\"\n",
+    "        move the element in place <old_index> to the <new_index> of the list <array>\n",
+    "        \"\"\"\n",
+    "        target_char = array.pop(old_index)\n",
+    "        array.insert(new_index, target_char)\n",
+    "\n",
+    "        return array\n",
+    "\n",
+    "    def print_board(self, column_indexes):\n",
+    "\n",
+    "        for i in range(8):\n",
+    "            row = ['▫️', '▫️', '▫️', '▫️', '▫️', '▫️', '▫️', '▫️']\n",
+    "            row[column_indexes[i]] = '♛'\n",
+    "            print(\"\".join(row))\n",
+    "\n",
+    "    def clear_combinations(self):\n",
+    "        self.all_combination = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of configurations: 92\n",
+      "\n",
+      "Board configuration 1:\n",
+      "▫️▫️♛▫️▫️▫️▫️▫️\n",
+      "♛▫️▫️▫️▫️▫️▫️▫️\n",
+      "▫️▫️▫️▫️▫️▫️♛▫️\n",
+      "▫️▫️▫️▫️♛▫️▫️▫️\n",
+      "▫️▫️▫️▫️▫️▫️▫️♛\n",
+      "▫️♛▫️▫️▫️▫️▫️▫️\n",
+      "▫️▫️▫️♛▫️▫️▫️▫️\n",
+      "▫️▫️▫️▫️▫️♛▫️▫️\n",
+      "\n",
+      "Board configuration 2:\n",
+      "▫️▫️▫️▫️▫️♛▫️▫️\n",
+      "▫️▫️♛▫️▫️▫️▫️▫️\n",
+      "▫️▫️▫️▫️▫️▫️♛▫️\n",
+      "▫️♛▫️▫️▫️▫️▫️▫️\n",
+      "▫️▫️▫️▫️▫️▫️▫️♛\n",
+      "▫️▫️▫️▫️♛▫️▫️▫️\n",
+      "♛▫️▫️▫️▫️▫️▫️▫️\n",
+      "▫️▫️▫️♛▫️▫️▫️▫️\n"
+     ]
+    }
+   ],
+   "source": [
+    "eight_queens = EightQueenSolution()\n",
+    "column_indexes = [0, 1, 2, 3, 4, 5, 6, 7]\n",
+    "eight_queens.permutation(column_indexes)\n",
+    "print(\"Total number of configurations: {}\".format(len(eight_queens.all_combination)))\n",
+    "print(\"\")\n",
+    "\n",
+    "# print two of the board configurations\n",
+    "print(\"Board configuration 1:\")\n",
+    "eight_queens.print_board(eight_queens.all_combination[12])\n",
+    "print(\"\")\n",
+    "print(\"Board configuration 2:\")\n",
+    "eight_queens.print_board(eight_queens.all_combination[73])\n"
    ]
   },
   {
