add more info for task38

--- a/ch4_解决面试题的思路/38_字符串的排列.ipynb
+++ b/ch4_解决面试题的思路/38_字符串的排列.ipynb
@@ -610,6 +610,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 举一反三\n",
+    "\n",
+    "如果面试题是按照一定要求摆放若干个数字，则可以先求出这些数字的所有排列，然后一一判断每个排列是不是满足题目要求"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
