--- a/ch4_解决面试题的思路/36_二叉搜索树与双向链表.ipynb
+++ b/ch4_解决面试题的思路/36_二叉搜索树与双向链表.ipynb
@@ -23,6 +23,7 @@
     "2.如果在递归里传递参数，回到上一层的时候，被传递的参数会回到初始值。\n",
     "\n",
     "基于以上两个点，只能在class里专门写一个变量用来保存需要在各个成员函数里改变的变量。here: `self.convert_node`\n",
+    "\n",
     "[//]: # (<img src=\"images/img123.png\" style=\"width: 400px;\"/>)"
    ]
   },
@@ -56,7 +57,7 @@
     "\n",
     "    def convert(self, pRootOfTree):\n",
     "        self.convert_node(pRootOfTree)\n",
-    "        # pLastNodeInList指向双向链表的尾节点，我们需要返回头头节点\n",
+    "        # pLastNodeInList指向双向链表的尾节点，我们需要返回头节点\n",
     "        pHeadOfList = self. pLastNodeInList\n",
     "        while pHeadOfList is not None and pHeadOfList.left is not None:\n",
     "            pHeadOfList = pHeadOfList.left\n",
@@ -66,7 +67,7 @@
     "    def convert_node(self, pNode):\n",
     "        \"\"\"\n",
     "        go though the tree in in-order recursively\n",
-    "        :param pNode: the currently visiting node\n",
+    "        :param pCurrent: the currently visiting node\n",
     "        :param pLastNodeInList: point at the last node in the already transforms double-linked-list\n",
     "        \"\"\"\n",
     "        if pNode is None:\n",
@@ -162,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
