--- a/ch5_优化时间和空间效率/41_数据流中的中位数.ipynb
+++ b/ch5_优化时间和空间效率/41_数据流中的中位数.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "1. 首先应保证数据平均分配到两个堆中，因此两个堆中数据的数目之差不能超过1。为了实现平均分配，可以在数据的总数目是偶数时把新数据插入min heap（右），否则插入max heap（左）。\n",
     "\n",
-    "2. 保证max heap的所有数据都大于min heap的所有数据。当数据总数为偶数时，按照前面的规则会把新的数据插入min heap（右），如此这个数据比max heap（左）的top要小，则需要把新数据先插入max heap（左），把最大的数拿出来插入min heap（右）。反之亦然。"
+    "2. 保证min heap的所有数据都大于max heap的所有数据。当数据总数为偶数时，按照前面的规则会把新的数据插入min heap（右），如果这个新数据比max heap（左）的top要小，则需要把新数据先插入max heap（左），把最大的数拿出来插入min heap（右）。反之亦然。"
    ]
   },
   {
@@ -214,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
